--- a/portfolio.html
+++ b/portfolio.html
@@ -159,7 +159,7 @@
     <footer>
         <div class="container down">
             <div class="down-contacts">
-                <a href="/index.html" class="logo-down"> <span class="pre-logo"> Web</span> Studio</a>
+                <a href="/index.html" class="footer__logo logo"> <span class="pre__logo"> Web</span>Studio</a>
                 <address>
                     <ul class="down-text">
                         <li class="town"><a href=" https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
